# GenRisk

./: .gitignore  .readthedocs.yml  LICENSE  README.md  requirements.txt  setup.cfg
docs/: cli.rst  index.rst  pipeline.rst
docs/association_results/: linear_assoc_alanine_aminotransferase_cov_filtered.csv  linear_assoc_albumin_cov_filtered.csv  linear_assoc_alkaline_phosphatase_cov_filtered.csv  linear_assoc_apolipoprotein_a_cov_filtered.csv  linear_assoc_apolipoprotein_b_cov_filtered.csv  linear_assoc_aspartate_aminotransferase_cov_filtered.csv  linear_assoc_calcium_cov_filtered.csv  linear_assoc_cholesterol_cov_filtered.csv  linear_assoc_creactive_protein_cov_filtered.csv  linear_assoc_creatinine_cov_filtered.csv  linear_assoc_cystatin_c_cov_filtered.csv  linear_assoc_direct_bilirubin_cov_filtered.csv  linear_assoc_gamma_glutamyltransferase_cov_filtered.csv  linear_assoc_glucose_cov_filtered.csv  linear_assoc_glycated_haemoglobin_hba1c_cov_filtered.csv  linear_assoc_hdl_cholesterol_cov_filtered.csv  linear_assoc_igf1_cov_filtered.csv  linear_assoc_ldl_direct_cov_filtered.csv  linear_assoc_lipoprotein_a_cov_filtered.csv
docs/source/: alanine_aminotransferase.rst  cli.rst  computation.rst  conf.py  index.rst  installation.rst  ldl_results.rst  methods_comparison.rst  model_types.rst  pipeline.rst  real_cases.rst  use_example.rst  utils.rst
docs/source/biomarkers/: alanine_aminotransferase.rst  albumin.rst  alkaline_phosphatase.rst  apolipoprotein_a.rst  apolipoprotein_b.rst  aspartate_aminotransferase.rst  cholesterol.rst  creactive_protein.rst  creatinine_serum.rst  hdl.rst  ldl.rst
scripts/: betareg_shell.R  plot_script.R
src/cogenassess/: betareg_shell.R  cli.py  pipeline.py  plot_script.R  utils.py
src/genrisk/: __init__.py  __main__.py  association_analysis.py  cli.py  gene_scoring.py  helpers.py  pipeline.py  prediction_models.py  prs_scoring.py  utils.py
toy_example/: README.md  annotated_toy_dataset.tsv  betareg_assoc_quan.tsv  info.pheno  linear_assoc_quan.tsv  load_models.ipynb  logit_assoc_binary.tsv  regression_classification_example.ipynb  snps_list.txt  toy.1.causals  toy.covariates  toy.pheno  toy_dataset.bim  toy_dataset.fam  toy_dataset.frq  toy_dataset.ipynb  toy_dataset_betareg_pvals.tsv  toy_dataset_feats.tsv  toy_dataset_scores  toy_example_classifier_features.tsv  toy_example_regressor_features.tsv  toy_pgs.tsv  toy_prs_scores.profile  toy_quan.1.causals  toy_quan.pheno
toy_example/binary_classifier_model/: binary_classifier_model.pkl  binary_classifier_model_compare_models.tsv  binary_classifier_model_external_testing_results.tsv  binary_classifier_model_report.txt  binary_classifier_model_tuned_model.tsv
toy_example/quan_regression_model/: quan_regression_model.pkl  quan_regression_model_compare_models.tsv  quan_regression_model_external_testing_results.tsv  quan_regression_model_report.txt  quan_regression_model_tuned_model.tsv
toy_example/toy_classifier/: toy_classifier.pkl  toy_classifier_evaluation.tsv  toy_classifier_logs.logs
toy_example/toy_classifier/mlruns/0/: meta.yaml
toy_example/toy_classifier/mlruns/1/: meta.yaml
toy_example/toy_classifier/mlruns/1/1bc108989cb2453a946cd24caa8745b3/: meta.yaml
toy_example/toy_classifier/mlruns/1/1e7f24f9e1bc43f2b8dd9d85d3acc0e7/: meta.yaml
toy_example/toy_classifier/mlruns/1/2a2c1a75d8d44e419dad9ad0ca0bacca/: meta.yaml
toy_example/toy_classifier/mlruns/1/33ad717d6a27424c98780749cbe1a634/: meta.yaml
toy_example/toy_classifier/mlruns/1/4123b75fd8a9462fa257e7edd00f00d5/: meta.yaml
toy_example/toy_classifier/mlruns/1/46412e6d10134f4e8d274b6d328e60e1/: meta.yaml
toy_example/toy_regressor/: toy_regressor.pkl  toy_regressor_evaluation.tsv  toy_regressor_logs.logs
toy_example/toy_regressor/mlruns/0/: meta.yaml
toy_example/toy_regressor/mlruns/1/: meta.yaml
(+515 files in other folders)
