########################
# Set up Configuration #
########################
[metadata]
name = GenRisk
version = 0.0.1
description = Comprehensive genetic risk assessment
long_description = file: README.md

url = https://github.com/AldisiRana/genrisk

author = Rana Aldisi
author_email = aldisi.rana@gmail.com

license = MIT
license_file = LICENSE

classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    genetics
    scoring
    risk
    comprehensive

[options]
install_requires =
    pandas
    numpy
    click
    pybiomart
    statsmodels
    scikit-learn
    tqdm
    pycaret
    qmplot
    matplotlib
    seaborn
    adjustText


zip_safe = false
python_requires = >= 3

# Where is my code
packages = find:
package_dir =
    = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    genrisk = genrisk.cli:main
