########################
# Set up Configuration #
########################
[metadata]
name = GenRisk
version = 0.0.10
description = Comprehensive genetic risk assessment
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/AldisiRana/genrisk

author = Rana Aldisi
author_email = aldisi.rana@gmail.com

license = MIT
license_file = LICENSE

classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    genetics
    scoring
    risk
    comprehensive

[options]
install_requires =
    pandas
    numpy
    click
    statsmodels
    scikit-learn
    tqdm
    pycaret
    qmplot
    matplotlib
    seaborn
    adjustText
    pybiomart


zip_safe = false
python_requires = >= 3

# Where is my code
packages = find:
package_dir =
    = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
    sphinx-toolbox

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    genrisk = genrisk.cli:main
