########################
# Set up Configuration #
########################
[metadata]
name = GenRisk
version = 0.3.1
description = Comprehensive genetic risk assessment
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/AldisiRana/genrisk

author = Rana Aldisi
author_email = aldisi.rana@gmail.com

license = MIT
license_file = LICENSE

classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    genetics
    scoring
    risk
    comprehensive

[options]
install_requires =
    pandas
    numpy>=1.21.5
    click>=7.1.2
    statsmodels==0.13.5
    scikit-learn>=1.2.0
    scipy>=1.5.4
    tqdm>=4.64.1
    pycaret>=3.0.0
    qmplot>=0.3.2
    matplotlib>=3.3.0
    seaborn>=0.12.2
    setuptools>=1.2.0
    joblib>=1.2.0
    adjustText
    pybiomart


zip_safe = false
python_requires = >= 3.7.5

# Where is my code
packages = find:
package_dir =
    = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
    sphinx-toolbox

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    genrisk = genrisk.cli:main
